MOD: Refactorizacion de codigo e optimizacion en algunos procesos